// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OverflowWrapper /> should render 1`] = `
<div>
  <div
    class="sc-aXZVg iuhBAh"
  >
    <div
      class="sc-gEvEer jOaSPk"
    >
      Default shadow color
    </div>
  </div>
</div>
`;

exports[`<OverflowWrapper /> should render with correct color 1`] = `
<div>
  <div
    class="sc-aXZVg bihbSj"
  >
    <div
      class="sc-gEvEer jOaSPk"
    >
      Red shadow color
    </div>
  </div>
</div>
`;
